removed ui-dialog class for author-details dialog, fixed alignment in add journal conference dialog

--- a/src/app/pubsupport/pubsupport/author-details/author-details.component.css
+++ b/src/app/pubsupport/pubsupport/author-details/author-details.component.css
@@ -1,12 +1,3 @@
-::ng-deep .ui-dialog {
-    top:50px !important;
-}
-
-/* ::ng-deep .ui-tabview.ui-tabview-top .ui-tabview-nav li.ui-state-active:hover, .ui-tabview.ui-tabview-bottom .ui-tabview-nav li.ui-state-active:hover, .ui-tabview.ui-tabview-left .ui-tabview-nav li.ui-state-active:hover, .ui-tabview.ui-tabview-right .ui-tabview-nav li.ui-state-active:hover {
-    border: 1px solid #d7181f !important;
-    background-color: #d7181f !important;
-} */
-
 ::ng-deep .ui-tabview.ui-tabview-top .ui-tabview-nav li.ui-state-active, ::ng-deep .ui-tabview.ui-tabview-bottom .ui-tabview-nav li.ui-state-active, ::ng-deep .ui-tabview.ui-tabview-left .ui-tabview-nav li.ui-state-active, ::ng-deep .ui-tabview.ui-tabview-right .ui-tabview-nav li.ui-state-active{
     background-color: #d7181f !important;
     border: 1px solid #d7181f !important;
